[tool.poetry]
name = "learn-rl"
version = "0.1.0"
description = "Implement RL algorithms from scrath"
authors = ["Florian Wiesner <wiesnerflorian94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.3.0+cu121", source = "pytorch-cuda-121"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-cuda-121"}
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}


[[tool.poetry.source]]
name = "pytorch-cuda-121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
